[package]
name = "raft-lern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = {version="4.3.0",features=["derive"]}
actix-web = "4.4.0"

log = "0.4.6"
log4rs = "1.1.1"
chrono = "0.4.26"
rand="0.8.5"