[package]
name = "raft-lern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
reqwest={version = "0.11.20",features = ["json"]}

log = "0.4.6"
log4rs = "1.1.1"
chrono = "0.4.26"
rand="0.8.5"
anyhow="1.0.75"